--- a/web/permisostrabajo/mis_permisos.xhtml
+++ b/web/permisostrabajo/mis_permisos.xhtml
@@ -22,8 +22,8 @@
                     <p:column headerText="Titulo">
                         <h:outputText value="#{permiso.tarea}"/>
                     </p:column>
-                    <p:column headerText="Ejecutante">
-                        <h:outputText value="#{permiso.usuariosEjecutante}"/>
+                    <p:column headerText="Solicitante">
+                        <h:outputText value="#{permiso.usuarioCreacion}"/>
                     </p:column>
                     <p:column headerText="Fecha Inicio">
                         <h:outputText value="#{permiso.fechaHoraIni}"/>
