--- a/web/herramientas/peligro.xhtml
+++ b/web/herramientas/peligro.xhtml
@@ -24,7 +24,7 @@
                 </f:facet>
                 <p:row>
                     <p:column colspan="1"><h:outputLabel for="nombre" value="Peligro" /></p:column>
-                    <p:column colspan="1"><p:inputText id="nombre" value="#{riesgoController.item.nombre}" required="true" /></p:column>
+                    <p:column colspan="1"><p:inputText id="nombre" value="#{riesgoController.item.nombre}" required="true"><p:ajax/></p:inputText></p:column>
                     <p:column colspan="1"><p:message for="nombre"/></p:column>
                 </p:row>
 
@@ -38,33 +38,21 @@
                                         <p:ajax/>
                                     </p:inputText>
                                     <p:message for="datos"/>
-                                    <p:commandLink update=":form:controles_peligro"  process="@this" actionListener="#{riesgoController.addControl}" value="Agregar Control"/>
+                                    <p:commandButton update=":form:controles_peligro"  process="@this" actionListener="#{riesgoController.addControl}" icon="ui-icon-plus"/>
                                 </p:panelGrid>
                                 <p:dataTable value="#{riesgoController.item.controles}" var="control"
                                              paginator="true" rows="5"
                                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                              paginatorAlwaysVisible="false"
                                              paginatorPosition="top">
-                                    <p:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="Paso" />
-                                        </f:facet>
+                                    <p:column headerText="Paso">
                                         <h:outputText value="#{control.consecutivo}"/>
                                     </p:column>
-                                    <p:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="Control" />
-                                        </f:facet>
+                                    <p:column headerText="Control">
                                         <h:outputText value="#{control.nombre}"/>
                                     </p:column>
-                                    <p:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="Borrar" />
-                                        </f:facet>
-                                        <p:commandLink update=":form"  process="@this" actionListener="#{riesgoController.removeControl}" ajax="true">
-                                                 <p:graphicImage value="/images/cross.gif"/>
-                                            <f:attribute name="itemBorrar" value="#{control}" />
-                                        </p:commandLink>
+                                    <p:column headerText="Borrar">
+                                        <p:commandButton icon="ui-icon-trash" update=":form"  process="@this" actionListener="#{riesgoController.removeControl(control)}" />
                                     </p:column>
                                 </p:dataTable>
                             </p:tab>
@@ -74,9 +62,7 @@
                 <f:facet name="footer">
                     <p:row>
                         <p:column colspan="3">
-                            <p:commandButton value="Guardar" update="@form"  action="#{riesgoController.guardar}" ajax="true">
-                                <p:collector value="#{riesgoController.item}" addTo="#{riesgoController.items}"/>
-                            </p:commandButton>
+                            <p:commandButton value="Guardar" update="@form"  action="#{riesgoController.guardar}" ajax="true" icon="ui-icon-disk"/>
                         </p:column>
                     </p:row>
                 </f:facet>
@@ -93,34 +79,17 @@
 
 
             <p:outputPanel id="riesgos">
-                <p:commandLink actionListener="#{riesgoController.crearNuevo}" update="@form" value="Crear Nuevo"/>
+                <p:commandButton actionListener="#{riesgoController.crearNuevo}" update="@form" value="Crear" icon="ui-icon-document"/>
                 <p:dataTable value="#{riesgoController.items}" var="item" >
-                    <p:column >
-                        <f:facet name="header">
-                            <h:outputText value="Codigo" />
-                        </f:facet>
+                    <p:column headerText="Codigo">
                         <h:outputText value="#{item.nombre}"/>
                     </p:column>
-                    <p:column >
-                        <f:facet name="header">
-                            <h:outputText value="Borrar" />
-                        </f:facet>
-                        <p:commandLink update=":form:riesgos :form:msgs"  process="@this" actionListener="#{riesgoController.borrar}">
-                            <p:graphicImage value="/images/cross.gif"/>
-                            <f:attribute name="itemCambiar" value="#{item}" />
-                            <p:collector value="#{item}" removeFrom="#{riesgoController.items}"/>
-                        </p:commandLink>
+                    <p:column headerText="Borrar">
+                        <p:commandButton update=":form:riesgos :form:msgs"  process="@this" actionListener="#{riesgoController.borrar(item)}" icon="ui-icon-trash"/>
                     </p:column>
-                    <p:column >
-                        <f:facet name="header">
-                            <h:outputText value="Actualizar" />
-                        </f:facet>
-                        <p:commandLink update="@form"  process="@this" actionListener="#{riesgoController.actualizar}">
-                            <p:graphicImage value="/images/update.png"/>
-                            <f:attribute name="itemCambiar" value="#{item}" />
-                        </p:commandLink>
+                    <p:column headerText="Actualizar">
+                        <p:commandButton update="@form"  process="@this" actionListener="#{riesgoController.actualizar(item)}" icon="ui-icon-pencil"/>
                     </p:column>
-
                 </p:dataTable>
 
             </p:outputPanel>
