--- a/web/permisostrabajo/creacion_trazabilidad.xhtml
+++ b/web/permisostrabajo/creacion_trazabilidad.xhtml
@@ -24,18 +24,18 @@
                     </f:facet> 
                     <p:row>
                         <p:column style="border-width: 1px;">
-                            <p:outputLabel value="#{creaPermisoController.permiso.permiso.id}"/>
+                            <p:outputLabel value="#{creaPermisoController.permiso.id}"/>
                         </p:column>
                         <p:column style="border-width: 1px;">
-                            <p:outputLabel value="#{creaPermisoController.permiso.permiso.tarea}"/>
+                            <p:outputLabel value="#{creaPermisoController.permiso.tarea}"/>
                         </p:column>
                         <p:column style="border-width: 1px;">
-                            <p:inplace editor="true" label="#{creaPermisoController.permiso.permiso.estadoPermiso.descripcion}">  
-                                <h:selectOneMenu value="#{creaPermisoController.permiso.permiso.estadoPermiso.id}" valueChangeListener="#{creaPermisoController.cambiarEstado}">  
-                                    <f:selectItem  itemValue="#{creaPermisoController.permiso.permiso.estadoPermiso.id}"  
-                                                   itemLabel="#{creaPermisoController.permiso.permiso.estadoPermiso.descripcion}"/> 
-                                    <f:selectItem  itemValue="#{creaPermisoController.permiso.permiso.estadoAnterior.id}"  
-                                                   itemLabel="#{creaPermisoController.permiso.permiso.estadoAnterior.descripcion}"/> 
+                            <p:inplace editor="true" label="#{creaPermisoController.permiso.estadoPermiso.descripcion}">  
+                                <h:selectOneMenu value="#{creaPermisoController.permiso.estadoPermiso.id}" valueChangeListener="#{creaPermisoController.cambiarEstado}">  
+                                    <f:selectItem  itemValue="#{creaPermisoController.permiso.estadoPermiso.id}"  
+                                                   itemLabel="#{creaPermisoController.permiso.estadoPermiso.descripcion}"/> 
+                                    <f:selectItem  itemValue="#{creaPermisoController.permiso.estadoAnterior.id}"  
+                                                   itemLabel="#{creaPermisoController.permiso.estadoAnterior.descripcion}"/> 
                                     <p:ajax update="@form"/>
                                 </h:selectOneMenu>  
                             </p:inplace> 
@@ -66,16 +66,16 @@
                     <f:facet name="footer">
                         <!--  Sólo se permite la edición cuando está en estado creado Estado de Permiso 1 -->
                         <p:commandButton icon="ui-icon-pencil" value="Editar" title="Editar permiso de trabajo" 
-                                         action="#{creaPermisoController.consultarDatosPermiso}" disabled="#{creaPermisoController.permiso.permiso.estadoPermiso.id ne 1}"/>
+                                         action="#{creaPermisoController.consultarDatosPermiso}" disabled="#{creaPermisoController.permiso.estadoPermiso.id ne 1}"/>
                     </f:facet>
                 </p:dataTable>
             </p:panel>
             
-            <p:panel header="Notas del Permiso de Trabajo" rendered="#{not empty creaPermisoController.permiso.permiso.notas}">
+            <p:panel header="Notas del Permiso de Trabajo" rendered="#{not empty creaPermisoController.permiso.notas}">
                 <p:commandButton icon="ui-icon-document" value="Agregar Nota" oncomplete="dlg_nota.show()"/>
                 
                 <p:outputPanel id="notas">
-                    <p:dataTable value="#{creaPermisoController.permiso.permiso.notas}" var="item">
+                    <p:dataTable value="#{creaPermisoController.permiso.notas}" var="item">
                         <p:column headerText="Nota">
                             <h:outputText value="#{item.nota}"/>
                         </p:column>
