--- a/web/usuarios/usuarios.xhtml
+++ b/web/usuarios/usuarios.xhtml
@@ -43,7 +43,7 @@
         <br/>
         
         <p:outputPanel id="usuarios">
-            <p:commandLink update="@form" actionListener="#{usuariosController.nuevo}" value="Nuevo Usuario"/>
+            <p:commandButton update="@form" actionListener="#{usuariosController.nuevo}" value="Crear" icon="ui-icon-document"/>
             <p:dataTable value="#{usuariosController.usuarios}" var="usuario"
                              paginator="true"
                              rows="10"
@@ -55,18 +55,11 @@
                 </p:column>
 
                 <p:column headerText="Borrar">
-                    <p:commandLink update=":form:usuarios :form:msgs"  process="@this" actionListener="#{usuariosController.borrar}">
-                        <p:graphicImage value="/images/cross.gif"/>
-                        <f:attribute name="usuarioBorrar" value="#{usuario}" />
-                    </p:commandLink>
+                    <p:commandButton update=":form:usuarios :form:msgs" icon="ui-icon-trash" process="@this" actionListener="#{usuariosController.borrar(usuario)}"/>
                 </p:column>
                 <p:column headerText="Actualizar">
-                    <p:commandLink update="@form"  process="@this" actionListener="#{usuariosController.actualizar}">
-                        <p:graphicImage value="/images/update.png"/>
-                        <f:attribute name="usuarioCambiar" value="#{usuario}" />
-                    </p:commandLink>
+                    <p:commandButton update="@form"  process="@this" actionListener="#{usuariosController.actualizar(usuario)}" icon="ui-icon-pencil"/>
                 </p:column>
-
             </p:dataTable>
         </p:outputPanel>
 
